-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.8.0
-
None
-
3
-
9223372036854775807
DNE update replay might update last_rcvd file, but because it will be operated on OSD/OSP directly, so the memory structure (ted/lrd etc) will not be updated by update replay handler, so it needs update these memory structure by itself after each update replay. (see replay_request_or_update() ).
In current implementation, this is done in target_update_lcd(), but multiple slot patch just changed this process, so target_update_lcd needs to be fixed as well.
- is blocking
-
LU-6773 DNE2 Failover and recovery soak testing
-
- Closed
-
- is related to
-
LU-6831 The ticket for tracking all DNE2 bugs
-
- Reopened
-
-
LU-6844 replay-single test 70b failure: 'rundbench load on * failed!'
-
- Resolved
-
-
LU-7077 Pointer 'hash' returned from call to function 'cfs_hash_getref' may be NULL and will be dereferenced.
-
- Resolved
-
- is related to
-
LU-5319 Support multiple slots per client in last_rcvd file
-
- Resolved
-