LU-6840 target: update reply data after update replay

Because update replay will be operated on OSD/OSP directly,
so if the updates include updating reply data, it will only
update reply_data file, so we needs to update reply data in
memory (lsd_reply_data) by ourselves after each update replay.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: I32e5b2a7d30aecfb1a20b8d31a0054a3c28ccd50