lustre/target/tgt_lastrcvd.c
@@ -1061,6 +1061,58 @@ int tgt_client_del(const struct lu_env *env, struct obd_export *exp)
 }
 EXPORT_SYMBOL(tgt_client_del);
 
+int tgt_add_reply_data(const struct lu_env *env, struct lu_target *tgt,
+		       struct tg_export_data *ted, struct tg_reply_data *trd,
+		       struct thandle *th, bool update_lrd_file)
+{
+	struct lsd_reply_data	*lrd;
+	int	i;
+
+	lrd = &trd->trd_reply;
+	/* update export last transno */
+	mutex_lock(&ted->ted_lcd_lock);
+	if (lrd->lrd_transno > ted->ted_lcd->lcd_last_transno)
+		ted->ted_lcd->lcd_last_transno = lrd->lrd_transno;
+	mutex_unlock(&ted->ted_lcd_lock);
+
+	/* find a empty slot */
+	i = tgt_find_free_reply_slot(tgt);
+	if (unlikely(i < 0)) {
+		CERROR("%s: couldn't find a slot for reply data: "
+		       "rc = %d\n", tgt_name(tgt), i);
+		RETURN(i);
+	}
+	trd->trd_index = i;
+
+	if (update_lrd_file) {
+		loff_t	off;
+		int	rc;
+
+		/* write reply data to disk */
+		off = sizeof(struct lsd_reply_header) + sizeof(*lrd) * i;
+		rc = tgt_reply_data_write(env, tgt, lrd, off, th);
+		if (unlikely(rc != 0)) {
+			CERROR("%s: can't update %s file: rc = %d\n",
+			       tgt_name(tgt), REPLY_DATA, rc);
+			RETURN(rc);
+		}
+	}
+	/* add reply data to target export's reply list */
+	mutex_lock(&ted->ted_lcd_lock);
+	list_add(&trd->trd_list, &ted->ted_reply_list);
+	ted->ted_reply_cnt++;
+	if (ted->ted_reply_cnt > ted->ted_reply_max)
+		ted->ted_reply_max = ted->ted_reply_cnt;
+	mutex_unlock(&ted->ted_lcd_lock);
+
+	CDEBUG(D_TRACE, "add reply %p: xid %llu, transno %llu, "
+	       "tag %hu, client gen %u, slot idx %d\n",
+	       trd, lrd->lrd_xid, lrd->lrd_transno,
+	       trd->trd_tag, lrd->lrd_client_gen, i);
+	RETURN(0);
+}
+EXPORT_SYMBOL(tgt_add_reply_data);
+
 /*
  * last_rcvd & last_committed update callbacks
  */
@@ -1150,18 +1202,10 @@ static int tgt_last_rcvd_update(const struct lu_env *env, struct lu_target *tgt,
 		struct tg_reply_data	*trd;
 		struct lsd_reply_data	*lrd;
 		__u64			*pre_versions;
-		int			 i;
-		loff_t			 off;
 
 		OBD_ALLOC_PTR(trd);
 		if (unlikely(trd == NULL))
 			GOTO(srv_update, rc = -ENOMEM);
-
-		/* update export last transno */
-		mutex_lock(&ted->ted_lcd_lock);
-		if (tti->tti_transno > ted->ted_lcd->lcd_last_transno)
-			ted->ted_lcd->lcd_last_transno = tti->tti_transno;
-		mutex_unlock(&ted->ted_lcd_lock);
 
 		/* fill reply data information */
 		lrd = &trd->trd_reply;
@@ -1179,38 +1223,8 @@ static int tgt_last_rcvd_update(const struct lu_env *env, struct lu_target *tgt,
 			trd->trd_pre_versions[3] = pre_versions[3];
 		}
 
-		/* find a empty slot */
-		i = tgt_find_free_reply_slot(tgt);
-		if (unlikely(i < 0)) {
-			CERROR("%s: couldn't find a slot for reply data: "
-			       "rc = %d\n", tgt_name(tgt), i);
-			GOTO(srv_update, rc = i);
-		}
-		trd->trd_index = i;
-
-		/* write reply data to disk */
-		off = sizeof(struct lsd_reply_header) + sizeof(*lrd) * i;
-		rc = tgt_reply_data_write(env, tgt, lrd, off, th);
-		if (unlikely(rc != 0)) {
-			CERROR("%s: can't update %s file: rc = %d\n",
-			       tgt_name(tgt), REPLY_DATA, rc);
-			RETURN(rc);
-		}
-
-		/* add reply data to target export's reply list */
-		mutex_lock(&ted->ted_lcd_lock);
-		list_add(&trd->trd_list, &ted->ted_reply_list);
-		ted->ted_reply_cnt++;
-		if (ted->ted_reply_cnt > ted->ted_reply_max)
-			ted->ted_reply_max = ted->ted_reply_cnt;
-		mutex_unlock(&ted->ted_lcd_lock);
-
-		CDEBUG(D_TRACE, "add reply %p: xid %llu, transno %llu, "
-		       "tag %hu, client gen %u, slot idx %d\n",
-		       trd, lrd->lrd_xid, lrd->lrd_transno,
-		       trd->trd_tag, lrd->lrd_client_gen, i);
-
-		GOTO(srv_update, rc = 0);
+		rc = tgt_add_reply_data(env, tgt, ted, trd, th, true);
+		GOTO(srv_update, rc);
 	}
 
 	mutex_lock(&ted->ted_lcd_lock);
@@ -1406,7 +1420,6 @@ static int tgt_clients_data_init(const struct lu_env *env,
 		    lcd->lcd_generation != 0) {
 			/* compute the highest valid client generation */
 			generation = max(generation, lcd->lcd_generation);
-
 			/* fill client_generation <-> export hash table */
 			rc = cfs_hash_add_unique(hash, &lcd->lcd_generation,
 						 &exp->exp_gen_hash);
@@ -1743,7 +1756,6 @@ int tgt_reply_data_init(const struct lu_env *env, struct lu_target *tgt)
 	loff_t			 off;
 	struct cfs_hash		*hash = NULL;
 	struct obd_export	*exp;
-	struct obd_export	*tmp;
 	struct tg_export_data   *ted;
 	int			 reply_data_recovered = 0;
 
@@ -1856,20 +1868,6 @@ int tgt_reply_data_init(const struct lu_env *env, struct lu_target *tgt)
 		}
 		CDEBUG(D_INFO, "%s: %d reply data have been recovered\n",
 		       tgt_name(tgt), reply_data_recovered);
-
-		/* delete entries from client_generation<->export hash */
-		spin_lock(&tgt->lut_obd->obd_dev_lock);
-		list_for_each_entry_safe(exp, tmp,
-					 &tgt->lut_obd->obd_exports,
-					 exp_obd_chain) {
-			struct tg_export_data *ted = &exp->exp_target_data;
-
-			if (!hlist_unhashed(&exp->exp_gen_hash))
-				cfs_hash_del(hash,
-					     &ted->ted_lcd->lcd_generation,
-					     &exp->exp_gen_hash);
-		}
-		spin_unlock(&tgt->lut_obd->obd_dev_lock);
 	}
 
 	rc = 0;
@@ -1886,25 +1884,39 @@ out:
 	return rc;
 }
 
+struct tg_reply_data *tgt_lookup_reply_by_xid(struct tg_export_data *ted,
+					      __u64 xid)
+{
+	struct tg_reply_data	*found = NULL;
+	struct tg_reply_data	*reply;
+
+	mutex_lock(&ted->ted_lcd_lock);
+	list_for_each_entry(reply, &ted->ted_reply_list, trd_list) {
+		if (reply->trd_reply.lrd_xid == xid) {
+			found = reply;
+			break;
+		}
+	}
+	mutex_unlock(&ted->ted_lcd_lock);
+	return found;
+}
+EXPORT_SYMBOL(tgt_lookup_reply_by_xid);
+
 /* Look for a reply data matching specified request @req
  * A copy is returned in @trd if the pointer is not NULL
  */
 bool tgt_lookup_reply(struct ptlrpc_request *req, struct tg_reply_data *trd)
 {
 	struct tg_export_data	*ted = &req->rq_export->exp_target_data;
-	struct tg_reply_data	*reply, *tmp;
+	struct tg_reply_data	*reply;
 	bool			 found = false;
 
-	mutex_lock(&ted->ted_lcd_lock);
-	list_for_each_entry_safe(reply, tmp, &ted->ted_reply_list, trd_list) {
-		if (reply->trd_reply.lrd_xid == req->rq_xid) {
-			found = true;
-			break;
-		}
+	reply = tgt_lookup_reply_by_xid(ted, req->rq_xid);
+	if (reply != NULL) {
+		found = true;
+		if (trd != NULL)
+			*trd = *reply;
 	}
-	if (found && trd != NULL)
-		*trd = *reply;
-	mutex_unlock(&ted->ted_lcd_lock);
 
 	CDEBUG(D_TRACE, "%s: lookup reply xid %llu, found %d\n",
 	       tgt_name(class_exp2tgt(req->rq_export)), req->rq_xid,
